Rewritten Pin mechanism.